comment classes, bugfix, beautify